# Rust-Advanced

./: Cargo.toml  README.md
.cargo/: config.toml
Oops_17/: Cargo.toml
Oops_17/src/: animal.md  animal.rs  char_17_1.rs  main.rs
closure/: Cargo.toml
closure/src/: closure.md  lib.rs
closure/src/docs/: closure.md  declare_closure.md  type_inferance.md
entry_point/: Cargo.toml
entry_point/src/: main.rs
smartpointer_15/: Cargo.toml
smartpointer_15/src/: 1_smartpointer.rs  box_15_1.rs  deref_trait_15_2.rs  main.rs
